--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,19 @@
-.image {
+html,
+body,
+#root,
+canvas {
   width: 100%;
-  object-fit:cover;
+  height: 100%;
+  margin: 0;
+}
+
+@font-face {
+  font-family: "RussoOne";
+  src: local("RussoOne"),
+    url(./assets/fonts/RussoOne-Regular.ttf) format("opentype");
+}
+@font-face {
+  font-family: "PoiretOne";
+  src: local("PoiretOne"),
+    url(./assets/fonts/PoiretOne-Regular.ttf) format("opentype");
 }
