--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@ canvas {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+  color: white
+}
+
 @font-face {
   font-family: "RussoOne";
   src: local("RussoOne"),
